# motor

./: CMakeLists.txt  README.md  attacks.h  attacks.hpp  bitboard.h  bits.h  bits.hpp  board.h  chess_move.hpp  eval.h  kgsb.h  kindergarten.hpp  kindergarten.md  kindergarten_pext.hpp  magic_kindergarten.h  main.cpp  makefile  motor.sln  motor.vcxproj  move.h  move_t.h  movegen.h  movelist.h  perft.h  perft.hpp  pinmask.h  pinmask.hpp  search.h  sliders.md  stopwatch_t.h  transposition_table.h  types.hpp  uci.h  zobrist.h  zobrist.hpp
chess/: attacks.hpp  bits.hpp  board.hpp  chessmove.hpp  fen_utils.hpp  kindergarten.hpp  types.hpp  zobrist.hpp
chess/slider_attacks/: split_pext.hpp
chess_board/: attacks.hpp  bits.hpp  board.hpp  chess_move.hpp  fen_utilities.hpp  pinmask.hpp  types.hpp  zobrist_keys.hpp
chess_board/slider_attacks/: kindergarten.hpp  kindergarten.md  split_pext.hpp
cli/: uci.hpp
evaluation/: evaluation.hpp  incbin.hpp  nnue.hpp  weights.hpp
executioner/: makemove.hpp
generator/: move_generator.hpp  movelist.hpp
move_generation/: move_generator.hpp  move_list.hpp
search/: bench.hpp  pv_table.hpp  quiescence_search.hpp  search.hpp  search_data.hpp  time_keeper.hpp  transposition_table.hpp  tuning_options.hpp
search/move_ordering/: move_ordering.hpp  see.hpp
search/tables/: butterfly_table.hpp  history_table.hpp  lmr_table.hpp  transposition_table.hpp
